# serenity

./: Cargo.toml
src/: lib.rs
src/framework/: args.rs  buckets.rs  command.rs  configuration.rs  create_command.rs  create_group.rs  help_commands.rs  macros.rs  mod.rs
src/framework/standard/: configuration.rs  create_command.rs  create_group.rs  create_help_command.rs  help_commands.rs  mod.rs
tests/: command.rs
