[package]
name = "serenity-standard-framework"
authors = ["alex <acdenissk69@gmail.com>", "Zeyla Hellyer <hi@zeyla.me>", "Alex Parrill <alex.parrill@col32.net>"]
license = "ISC"
version = "0.0.1"

[dependencies]
chrono = "~0.4"
lazy_static = "^1.0"
log = "~0.4"
parking_lot = "^0.5"
threadpool= "~1.7"

[dependencies.serenity]
#version = "0.5.9"
# TODO: go back to official version when it actually compiles on Arch
git = "https://github.com/ColonelThirtyTwo/serenity.git"
branch = "openssl111"
features = ["framework", "cache", "client", "model"]

[dev-dependencies]
matches = "0.1.6"
